schema/testdata/errors/set_attribute_built_in_fields.keel
model Post {
    fields {
        name Text?
        published Boolean?
        publisher Publisher?
        identity Identity? @unique
    }

    actions {
        create createPost() with (name, published) {
            //expect-error:23:32:AttributeArgumentError:Cannot set the field 'createdAt' as it is a built-in field and can only be mutated internally
            @set(post.createdAt = ctx.now)
            //expect-error:23:32:AttributeArgumentError:Cannot set the field 'updatedAt' as it is a built-in field and can only be mutated internally
            @set(post.updatedAt = ctx.now)
        }
        create createPost2() with (name, published, publisher.name) {
            //expect-error:33:42:AttributeArgumentError:Cannot set the field 'createdAt' as it is a built-in field and can only be mutated internally
            @set(post.publisher.createdAt = ctx.now)
            //expect-error:33:42:AttributeArgumentError:Cannot set the field 'updatedAt' as it is a built-in field and can only be mutated internally
            @set(post.publisher.updatedAt = ctx.now)
        }
        update updatePost(id) with (name, published) {
            //expect-error:23:32:AttributeArgumentError:Cannot set the field 'createdAt' as it is a built-in field and can only be mutated internally
            @set(post.createdAt = ctx.now)
            //expect-error:23:32:AttributeArgumentError:Cannot set the field 'updatedAt' as it is a built-in field and can only be mutated internally
            @set(post.updatedAt = ctx.now)
        }
        update updatePost2(id) with (name, published) {
            //expect-error:18:42:AttributeArgumentError:Cannot set a field which is beyond scope of the data being created or updated
            @set(post.publisher.createdAt = ctx.now)
            //expect-error:18:42:AttributeArgumentError:Cannot set a field which is beyond scope of the data being created or updated
            @set(post.publisher.updatedAt = ctx.now)
        }
    }
}

model Publisher {
    fields {
        name Text
    }
}
